* 2013-03-04 - marcus.klein@open-xchange.com

 - Fix for bug 25168: Fix for bug 25168: Do not encode uiWebPath parameter provided in request. This breaks absolute Location headers

* 2013-02-20 - marcus.klein@open-xchange.com

 - Fix for bug 24694: Setting file permissions for configuration files with sensitive content without read permission for all users in
   system.

* 2012-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 23609: Fixed update of "reply-to" field

* 2012-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 23567: Proper translation when writing JSON response

* 2012-11-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 23549: Subtracting client timezone offset when parsing creation date

* 2012-10-19 - martin.herfurth@open-xchange.com

 - Fix for bug 23092: Wrong Confirmation Status as external participant was sent.

* 2012-10-10 - thorben.betten@open-xchange.com

 - Fix for bug 23238: Properly dealing with transient map on serialization attempt

* 2012-10-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 23207: Use contact service to modify attachment count 

* 2012-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 23219: Handle subsequent CRLFs in binary value
 - Fix for bug 23176: Checking for indication of 302 HTTP error code in thrown exception's message

* 2012-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 23199: Fixed composing reply text
 - Fix for bug 23202: Fixed possible NPE
 - Fix for bug 23203: Fixed possible NPE
 - Fix for bug 23204: Fixed possible NPE
 - Fix for bug 23205: Fixed possible NPE

* 2012-10-08 - marcus.klein@open-xchange.com

 - Fix for bug 23197: Removed snappy-java from OSGi 3rd party bundles.

* 2012-10-05 - thorben.betten@open-xchange.com

 - Fix for bug 23189: Further simplified and improved regex to look-up CSS blocks

* 2012-10-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 23184: Corrected attachment condition